--- a/manifest.json
+++ b/manifest.json
@@ -3,5 +3,11 @@
   "description": "A livereload client which does reload all your extensions",
   "manifest_version": 2,
   "minimum_chrome_version": "50",
-  "version": "0.1.0"
+  "version": "0.1.0",
+  "icons": {
+    "16": "icon16.png",
+    "32": "icon32.png",
+    "48": "icon48.png",
+    "128": "icon128.png"
+  }
 }
