--- a/manifest.json
+++ b/manifest.json
@@ -9,5 +9,10 @@
     "32": "icon32.png",
     "48": "icon48.png",
     "128": "icon128.png"
-  }
+  },
+  "background": {
+    "scripts": ["background.js"]
+  },
+  "permissions": ["management"],
+  "content_security_policy": "default-src 'self'; connect-src ws://localhost:35729;"
 }
